# fasterstylometry

./: .gitignore  DEVELOPMENT_TESTING.ipynb  README.md  mkdocs.yml  pyproject.toml
docs/: example.ipynb
fasterstylometry/: __init__.py  burrows_delta.py  corpus.py  tokenization.py  utils.py
tests/: test_corpus.py  test_fasterstylometry.py  test_performance.py
