[tool.poetry]
name = "fasterstylometry"
version = "0.1.0"
description = ""
authors = ["William Thorne <wthorne1@sheffield.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.11"
polars = ">1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
