[tool.poetry]
name = "fasterstylometry"
version = "0.1.0"
description = ""
authors = ["William Thorne <wthorne1@sheffield.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
pre-commit = "^3.8.0"

[tool.poetry.extras]
perf_testing = ["Gutenberg", "pandas"]